@@ -1,3 +1,5 @@
+* Make `:contains`, `:not`, and `:lang` return an empty array if nothing is passed in their parenthesis (:lang(), :not("")) . [jddalton]
+
 * Make select_regular() `ID optimization RTL` use `re_optimizeIdAtEnd`, replace overlooked `selector` variables with `normalized`, and ensure ID optimizations skip ID selectors with pseudos attached. [jddalton]
 
 * Revert `lastNormalized` usage in match() because of issues when match() calls select(). [jddalton]
